fixed lead search on ie.  refs #998

--- a/app/assets/client/css/grid.scss
+++ b/app/assets/client/css/grid.scss
@@ -263,7 +263,7 @@
     }
 
     input {
-      position: absolute;
+      position: static;
       z-index: 2;
       -webkit-appearance: none;
       border-radius: 0;
